--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
 
     nginx:
-     container_name: dev_nginx
+     container_name: langton_nginx
      image: nginx:latest
      ports:
         - 80:80
@@ -13,7 +13,7 @@ services:
         - ./nginx/vhost.conf:/etc/nginx/conf.d/default.conf
 
     angular:
-     container_name: dev_angular
+     container_name: langton_angular
      build: ./angular
      networks:
         - angular_net
